# pyspark-fantasy-sports

./: .gitignore  README.md  pyproject.toml
pyspark_fantasy_sports/: __init__.py  league_details.py  player.py  stock.py
tests/: conftest.py  test_league_details.py  test_player.py  test_stock.py
tests/test_data/: league_nfl.json  player_nfl.json
